# drac-outage-calendar

./: .gitignore  CLAUDE.md  README.md  drac_outages_ics.py  killarney.ics  outages.ics  pyproject.toml  requirements.txt  test_drac_outages_ics.py
.github/workflows/: outages.yml  pre-commit.yaml  test.yml
