[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drac-outage-calendar"
version = "0.1.0"
description = "iCalendar feed of scheduled Digital Research Alliance of Canada (DRAC) cluster outages, scraped from the status page."
readme = "README.md"
requires-python = ">=3.9"
# Runtime deps live in requirements.txt and test deps in requirements-test.txt
# (used directly by the workflows); read them from there for a single source of
# truth, matching the requirements-*.txt convention of the template repo.
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["drac_outages_ics"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.test = { file = ["requirements-test.txt"] }

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-ra"
